--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cytoscape-cose-bilkent": "^4.1.0",
     "cytoscape-dagre": "^2.5.0",
     "cytoscape-edgehandles": "^4.0.1",
+    "framer-motion": "^12.23.12",
     "immer": "^10.1.1",
     "lucide-react": "^0.541.0",
     "next": "15.5.0",
